# ESP32-OV2640

./: .gitignore  CMakeLists.txt  README.md  README_STREAM_LATENCY_STABILITY.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: _kiss_fft_guts.h.6A84EDE81AF03253.idx  activation_utils.h.19A336C0211FA39E.idx  activations.cc.8AFD8813F0AD75EE.idx  activations.h.282660895F55EA70.idx  activations_common.cc.A16703718B7BC39B.idx  add.cc.6BBB13528078AD3B.idx  add.h.0E119EB265CA1ABD.idx  add.h.740E098E16BA0694.idx  add.h.D2AFE03E59420216.idx  add_common.cc.F2A165AD5FF84B2C.idx  add_n.cc.A49D2264CEAB2C32.idx  add_n.h.19367ADB8A3258DC.idx  allocator.h.4BE58C5CF947C826.idx  arg_min_max.cc.6BF57E2CA817C204.idx  arg_min_max.h.3F6553F4B3378C48.idx  array.h.A7535A2593068526.idx  assign_variable.cc.5D9EEA40698FD7EB.idx  base.h.CD081071BE502B59.idx  batch_matmul.cc.06457A50BD6B2DAC.idx  batch_matmul.h.9DA0C5F4E96DA53E.idx  batch_matmul.h.DD8E536898AA2549.idx  batch_matmul_common.cc.C0000517BAFC9D4F.idx  batch_to_space_nd.cc.2CD9A1C81400A9FF.idx  batch_to_space_nd.h.0BE6B49E459F96E0.idx  bf20a6.c.8D55FE1CD59E1AAA.idx  bf20a6.h.873D86A80FDCCCB0.idx  bf20a6_regs.h.B7D1BB54E60B5FE8.idx  bf20a6_settings.h.D57B57621B56C150.idx  bf3005.c.7C3BBEA0D71739D5.idx  bf3005.h.6C54D85B9151ACED.idx  bf3005_regs.h.536AC25C34A69536.idx  binary_function.h.840606074877A9A9.idx  broadcast_args.cc.FE36AEE55ACC18A5.idx  broadcast_args.h.315A4BDCAEC2C033.idx  broadcast_to.cc.62BF47FD6CA58999.idx  broadcast_to.h.FBA956C18000F417.idx  buffer.h.CFA48C1A457E459C.idx  buffer_ref.h.905252E69AFABDAC.idx  builtin_op_data.h.0F40CB11237C8285.idx  builtin_op_data.h.C11C737E47BF12C7.idx  (+553 more)
components/esp32-camera-f/test/: test_camera.c
main/: CMakeLists.txt  app-globals.h  camera_driver.cpp  camera_driver.h  debug.cpp  debug.h  define.h  gpio-config.h  http-server.cpp  http-server.h  idf_component.yml  main.cpp  notes.md  tf-lite.cpp  tf-lite.h  wifi.cpp  wifi.h
main/camera-driver/: camera-driver.cpp  camera-driver.h
main/checkpoint-timer/: checkpoint-timer.cpp  checkpoint-timer.h
main/data-types/: frame-mailbox.cpp  frame-mailbox.h  frame-snapshot.h
main/http-server/: http-frame-buffer.cpp  http-frame-buffer.h  http-server.cpp  http-server.h  udp-fram-header.h
main/image-editing/: editing.cpp  editing.h  tf-resize.cpp  tf-resize.h
main/led/: led.cpp  led.h  red-led.cpp  red-led.h  rgb-led.cpp  rgb-led.h
main/psram/: psram.cpp  psram.h
main/tf-lite/: tf-lite.cpp  tf-lite.h
main/util/: misc.cpp  misc.h
main/wifi/: wifi.cpp  wifi.h
script/: README.txt  cc_to_tflite.py  read_model.py
